--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.side_menu li a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px 5px;
+}
+
+.side_menu li a.active{
+    background-color: red;
+    border-radius: 5px;
+}
